some fixes new emailbuilder

--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -26,6 +26,8 @@ Mit dem Header, dem Footer und den Einstellungen in der Vorlage wie Name, Betref
 
 Außerdem kannst du einstellen, dass dein plentymarkets System bei bestimmten Ereignissen, z.B. beim Eingehen neuer Bestellungen in deinem plentyShop oder nachdem Kund:innen deinen Newsletter abonniert haben, <<#e-mail-versand-automatisieren, automatisch E-Mails aus diesen Vorlagen>> erstellt und an deine Kund:innen versendet.
 
+// Schau dir dieses link:https://www.youtube.com/watch?v=denxnArUsJ0[Video^] an, um mehr über den EmailBuilder zu erfahren.
+
 [#vorbereitende-einstellungen]
 == Vorbereitende Einstellungen vornehmen
 
@@ -137,7 +139,8 @@ Erstelle Ordner, um später eine bessere Übersicht über deine E-Mail-Vorlagen 
 Ordner erstellen:
 
 . Öffne das Menü *CRM » EmailBuilder (Testphase)*.
-. Klicke unten links auf material:add[] *Hinzufügen* material:play_arrow[] > material:folder[] *Ordner*. +
+. Klicke unten links auf material:add[] *Hinzufügen* material:play_arrow[].
+. Klicke auf material:folder[] *Ordner*. +
 → Das Fenster *Neuen Ordner erstellen* öffnet sich.
 . Gib den Namen für den Ordner ein.
 . Klicke auf *Speichern*. +
@@ -197,7 +200,8 @@ Unterordner erstellen:
 . Öffne das Menü *CRM » EmailBuilder (Testphase)*.
 . Klicke in der Zeile des Ordners, für den du einen Unterordner erstellen möchtest, auf material:more_vert[]. +
 → Ein Fenster öffnet sich.
-. Klicke auf material:add[] *Hinzufügen* material:play_arrow[] > material:folder[] *Ordner*. +
+. Klicke auf material:add[] *Hinzufügen* material:play_arrow[].
+. Klicke auf material:folder[] *Ordner*. +
 → Das Fenster *Neuen Ordner erstellen* öffnet sich.
 . Gib den Namen für den Unterordner ein.
 . Klicke auf *Speichern*. +
@@ -254,7 +258,8 @@ Vorlage für den Header erstellen:
 . Öffne das Menü *CRM » EmailBuilder (Testphase)*.
 . Klicke in der Zeile des Ordners bzw. Unterordners, in dem du einen Header erstellen möchtest, auf material:more_vert[]. +
 → Ein Fenster öffnet sich.
-. Klicke auf material:add[] *Hinzufügen* material:play_arrow[] > material:web_asset[] *Header*. +
+. Klicke auf material:add[] *Hinzufügen* material:play_arrow[].
+. Klicke auf material:web_asset[] *Header*. +
 → Das Fenster *Neuen Header erstellen* öffnet sich.
 . Gib einen Namen für den Header ein.
 . Klicke auf *Speichern*. +
@@ -265,7 +270,7 @@ Vorlage für den Header erstellen:
 → Das Fenster *Neuer Name* öffnet sich.
 . Gib den Betreff für die Header-Vorlage ein.
 . Klicke auf *Speichern*.
-. Wähle (material:check_mark[role=skyBlue]) im Bereich *Einstellungen* den Eigner und den Mandant.
+. Wähle (material:check_box[role=skyBlue]) im Bereich *Einstellungen* den Eigner und den Mandant.
 . Klicke auf *Bearbeiten* (material:edit[]).
 . Bearbeite den Header nach deinen Wünschen und füge <<#widget-einfuegen, Widgets>> und <<#variablen-emailbuilder, Variablen>> ein.
 . *Speichere* (material:save[]) die Einstellungen.
@@ -298,7 +303,8 @@ Vorlage für den Footer erstellen:
 . Öffne das Menü *CRM » EmailBuilder (Testphase)*.
 Klicke in der Zeile des Ordners bzw. Unterordners, in dem du einen Footer erstellen möchtest, auf material:more_vert[]. +
 → Ein Fenster öffnet sich.
-. Klicke auf material:add[] *Hinzufügen* material:play_arrow[] > material:video_label[] *Footer*. +
+. Klicke auf material:add[] *Hinzufügen* material:play_arrow[].
+. Klicke auf material:video_label[] *Footer*. +
 → Das Fenster *Neuen Footer erstellen* öffnet sich. +
 . Gib einen Namen für den Footer ein.
 . Klicke auf *Speichern*. +
@@ -360,12 +366,13 @@ Vorlage erstellen:
 . Öffne das Menü *CRM » EmailBuilder (Testphase)*.
 . Klicke in der Zeile des Ordners, in dem du eine Vorlage erstellen möchtest, auf material:more_vert[]. +
 → Ein Fenster öffnet sich.
-. Klicke auf material:add[] *Hinzufügen* material:play_arrow[] > material:description[] *Vorlage*. +
+. Klicke auf material:add[] *Hinzufügen* material:play_arrow[].
+. Klicke auf material:description[] *Vorlage*. +
 → Das Fenster *Neue Vorlage erstellen* öffnet sich.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-emailbuilder-create-template>> und <<#image-emailbuilder-template>>.
 . *Speichere* (material:save[]) die Einstellungen.
 
-*_Hinweis:_* Wenn du die Vorlage nicht innerhalb eines Ordners erstellen möchtest, klicke auf der Startseite des Menüs *CRM » EmailBuilder (Testphase)* direkt unten links auf material:add[] *Hinzufügen* material:play_arrow[] und wähle dann material:description[] *Vorlage*. Die Vorlage wird dann auf der ersten Ebene erstellt, ohne dass sie zu einem Ordner gehört.
+*_Hinweis:_* Wenn du die Vorlage nicht innerhalb eines Ordners erstellen möchtest, klicke auf der Startseite des Menüs *CRM » EmailBuilder (Testphase)* direkt unten links auf material:add[] *Hinzufügen* material:play_arrow[] und klicke dann auf material:description[] *Vorlage*. Die Vorlage wird dann auf der ersten Ebene erstellt, ohne dass sie zu einem Ordner gehört.
 
 [TIP]
 .E-Mail-Vorlagen werden im Multipart-Format versendet
@@ -428,7 +435,7 @@ Mit einem Klick auf material:css[] in der Symbolleiste ganz oben kannst du das <
 |Klicke auf material:preview[] und wähle *Vorschau HTML* oder *Vorschau reiner Text*. Die Vorschau wird in einem separaten Fenster geöffnet.
 
 |[#intable-template-settings-copy]*Kopieren*
-|Klicke auf material:more_vert[] und dann auf material:copy_content[] *Kopieren*, um den Inhalt und die Einstellungen der Vorlage für eine andere Sprache zu kopieren. +
+|Klicke auf material:more_vert[] und dann auf material:content_copy[] *Kopieren*, um den Inhalt und die Einstellungen der Vorlage für eine andere Sprache zu kopieren. +
 *_Hinweis:_* Eine automatische Übersetzung erfolgt _nicht_. Du musst die Übersetzung selbst hinzufügen.
 
 |[#intable-template-settings-delete]*Löschen*
@@ -513,7 +520,7 @@ In der folgenden Tabelle findest du einige gängige Beispiele, um das Styling de
 |Gib `max-width:` gefolgt von der gewünschten Breite in Pixel in das Feld *Benutzerdefiniertes Styling* ein, z.B. `max-width:1200px`.
 
 |Hintergrundfarbe
-|Gib `background-color:` gefolgt von dem gewünschten link:https://htmlcolorcodes.com/[HTML-Farbencode^] in dieses Feld ein, z.B. `background-color:&#35;A9F5D0;`.
+|Gib `background-color:` gefolgt von dem gewünschten link:https://htmlcolorcodes.com/[HTML-Farbencode^] in das Feld *Benutzerdefiniertes Styling* ein, z.B. `background-color:&#35;A9F5D0;`.
 
 |Schriftfarbe
 |Gib `color:` gefolgt von dem gewünschten link:https://htmlcolorcodes.com/[HTML-Farbcode^] in das Feld *Benutzerdefiniertes Styling* ein, z.B. `color:&#35;A0A1B;`.
@@ -746,7 +753,8 @@ Standardvorlage erstellen:
 . Öffne das Menü *CRM » EmailBuilder (Testphase)*.
 . Klicke in der Zeile des Ordners, in dem du eine Standardvorlage erstellen möchtest, auf material:more_vert[]. +
 → Ein Fenster öffnet sich.
-. Klicke auf material:add[] *Hinzufügen* material:play_arrow[] > material:description[] *Vorlage*. +
+. Klicke auf material:add[] *Hinzufügen* material:play_arrow[].
+. Klicke auf material:description[] *Vorlage*. +
 → Das Fenster *Neue Vorlage erstellen* öffnet sich.
 . Gib einen Namen für die Vorlage ein.
 . Wähle Header und Footer für die Standardvorlage aus den Dropdown-Listen.
@@ -758,7 +766,7 @@ Sobald die Standardvorlage erstellt ist, siehst du im Editor den vorausgefüllte
 In der Symbolleiste siehst du den vorausgefüllten Betreff. Den Betreff kannst du mit einem Klick auf material:translate[] ganz oben rechts anpassen. Dort wählst du auch bis zu 3 statische Anhänge, die du an die E-Mail-Vorlage anhängen möchtest. +
 Im Bereich *Einstellungen* wählst du einen Eigner, den Mandanten und den Header und Footer, falls noch nicht geschehen. Dort kannst du auch bis zu 3 dynamische Anhänge wählen und die Felder *Antwort an*, *CC* und *BCC* befüllen.
 
-*_Hinweis:_* Wenn du die Standardvorlage nicht innerhalb eines Ordners erstellen möchtest, klicke auf der Startseite des Menüs *CRM » EmailBuilder (Testphase)* direkt unten links auf material:add[] *Hinzufügen* material:play_arrow[] und wähle dann material:description[] *Vorlage*. Die Vorlage wird dann auf der ersten Ebene erstellt, ohne dass sie zu einem Ordner gehört.
+*_Hinweis:_* Wenn du die Standardvorlage nicht innerhalb eines Ordners erstellen möchtest, klicke auf der Startseite des Menüs *CRM » EmailBuilder (Testphase)* direkt unten links auf material:add[] *Hinzufügen* material:play_arrow[] und klicke dann auf material:description[] *Vorlage*. Die Vorlage wird dann auf der ersten Ebene erstellt, ohne dass sie zu einem Ordner gehört.
 
 [#standardvorlagen-name-und-betreff]
 ==== Verfügbare Standardvorlagen
@@ -949,7 +957,7 @@ Vorlage verschieben:
 
 . Öffne das Menü *CRM » EmailBuilder (Testphase)*.
 . Klappe den Ordner auf (material:chevron_right[]), der die Vorlage enthält, die du verschieben möchtest.
-. Klicke in der Zeile der Vorlage auf material:more_vert[].
+. Klicke in der Zeile der Vorlage auf material:more_vert[]. +
 → Ein Fenster öffnet sich.
 . Klicke auf material:move_down[] *Verschieben*. +
 → Das Fenster *Verschieben* öffnet sich.
@@ -1033,7 +1041,7 @@ Vorlage kopieren:
 . Klappe den Ordner auf (material:chevron_right[]), der die Vorlage enthält, die du kopieren möchtest.
 . Klicke in der Zeile der Vorlage, die du kopieren möchtest, auf material:more_vert[]. +
 → Ein Fenster öffnet sich.
-. Klicke auf material:copy_content[] *Kopieren*. +
+. Klicke auf material:content_copy[] *Kopieren*. +
 → Ein Fenster öffnet sich.
 . Wähle die Sprache aus der Liste, in der du die Vorlage kopieren möchtest. +
 → Das Fenster *Betreff eingeben* öffnet sich. +
