--- a/docs/en-gb/modules/crm/pages/emailbuilder.adoc
+++ b/docs/en-gb/modules/crm/pages/emailbuilder.adoc
@@ -26,6 +26,8 @@ The header, the footer and the settings in the template such as the name, the su
 
 In case of certain events, e.g. if a new order is placed in your plentyShop or when a contact subscribes to a newsletter, your plentymarkets system automatically <<#automate-email-despatch, creates emails from these templates>> and sends them to your contacts.
 
+// Watch this link:https://www.youtube.com/watch?v=LnQ2MpTZEQw[video^] to learn more about the EmailBuilder.
+
 [#preparatory-settings]
 == Carrying out the preparatory settings
 
@@ -133,7 +135,8 @@ Create folders to get a better overview of your email templates at a later point
 Creating a folder:
 
 . Go to *CRM » EmailBuilder (Test phase)*.
-. In the bottom left corner, click on material:add[] *Add* material:play_arrow[] > material:folder[] *Folder*. +
+. In the bottom left corner, click on material:add[] *Add* material:play_arrow[].
+. Click on material:folder[] *Folder*. +
 → The *Create new folder* window opens.
 . Enter the name for the folder.
 . Click on *Save*. +
@@ -193,7 +196,8 @@ Creating a sub-folder:
 . Go to *CRM » EmailBuilder (Test phase)*.
 . In the line of the folder that you want to create a sub-folder for, click on material:more_vert[]. +
 → A new window opens.
-. Click on material:add[] *Add* material:play_arrow[] > material:folder[] *Folder*. +
+. Click on material:add[] *Add* material:play_arrow[]. 
+. Click on material:folder[] *Folder*. +
 → The *Create new folder* window opens.
 . Enter the name for the sub-folder.
 . Click on *Save*. +
@@ -250,7 +254,8 @@ Creating a header template:
 . Go to *CRM » EmailBuilder (Test phase)*.
 . In the line of the folder or sub-folder in which you want to create a header, click on material:more_vert[]. +
 → A new window opens.
-. Click on material:add[] *Add* material:play_arrow[] > material:web_asset[] *Header*. +
+. Click on material:add[] *Add* material:play_arrow[].
+. Click on material:web_asset[] *Header*. +
 → The *Create new header* window opens.
 . Enter a name for the header.
 . Click on *Save*. +
@@ -261,7 +266,7 @@ Creating a header template:
 → The window *New name* opens.
 . Enter the header template’s subject.
 . Click on *Save*.
-. In the *Settings* area, select (material:check_mark[role=skyBlue]) the owner and the client.
+. In the *Settings* area, select (material:check_box[role=skyBlue]) the owner and the client.
 . Click on *Edit* (material:edit[]).
 . Edit the header according to your wishes and insert <<#insert-widget, widgets>> and <<#variables-emailbuilder, variables>>.
 . *Save* (material:save[]) the settings.
@@ -294,7 +299,8 @@ Creating a footer template:
 . Go to *CRM » EmailBuilder (Test phase)*.
 In the line of the folder or sub-folder in which you want to create a footer, click on material:more_vert[]. +
 → A new window opens.
-. Click on material:add[] *Add* material:play_arrow[] > material:video_label[] *Footer*. +
+. Click on material:add[] *Add* material:play_arrow[].
+. Click on material:video_label[] *Footer*. +
 → The *Create new footer* window opens. +
 . Enter a name for the footer.
 . Click on *Save*. +
@@ -305,7 +311,7 @@ In the line of the folder or sub-folder in which you want to create a footer, cl
 → The window *New name* opens.
 . Enter the footer template’s subject.
 . Click on *Save*.
-. In the *Settings* area, select (material:check_mark[role=skyBlue]) the owner and the client.
+. In the *Settings* area, select (material:check_box[role=skyBlue]) the owner and the client.
 . Click on *Edit* (material:edit[]).
 . Edit the footer according to your wishes and insert <<#insert-widget, widgets>> and <<#variables-emailbuilder, variables>>.
 . *Save* (material:save[]) the settings.
@@ -356,12 +362,13 @@ Creating a template:
 . Go to *CRM » EmailBuilder (Test phase)*.
 . In the line of the folder or sub-folder in which you want to create a template, click on material:more_vert[]. +
 → A new window opens.
-. Click on material:add[] *Add* material:play_arrow[] > material:description[] *Template*. +
+. Click on material:add[] *Add* material:play_arrow[].
+. Click on material:description[] *Template*. +
 → The *Create new template* window opens.
 . Carry out the settings. Note <<#table-emailbuilder-create-template>> and <<#image-emailbuilder-template>>.
 . *Save* (material:save[]) the settings.
 
-*_Note:_* If you do not want to create the template within a folder, click on the start page of the *CRM » EmailBuilder (Test phase)* menu in the bottom left on material:add[] *Add* material:play_arrow[] and select material:description[] *Template* afterwards. The template will then be created on the first level and does not belong to a folder.
+*_Note:_* If you do not want to create the template within a folder, click on the start page of the *CRM » EmailBuilder (Test phase)* menu in the bottom left on material:add[] *Add* material:play_arrow[] and click on material:description[] *Template* afterwards. The template will then be created on the first level and does not belong to a folder.
 
 [TIP]
 .Email templates are sent in multipart format
@@ -424,7 +431,7 @@ Click on material:css[] in the toolbar on the top to adjust the <<#intable-templ
 |Click on material:preview[] and select *Preview HTML* or *Preview plain text*. The preview opens in a separate window.
 
 |[#intable-template-settings-copy]*Copy*
-|Click on material:more_vert[] and then on material:copy_content[] *Copy* to copy the content and the settings of the template to another language. +
+|Click on material:more_vert[] and then on material:content_copy[] *Copy* to copy the content and the settings of the template to another language. +
 *_Note:_* The content is _not_ translated automatically. You have to add the translation yourself.
 
 |[#intable-template-settings-delete]*Delete*
@@ -509,7 +516,7 @@ The following table lists some common examples about how to adjust the styling o
 |Enter `max-width:` in the *Custom styles* field followed by the desired width in pixel, e.g. `max-width:1200px`.
 
 |Background colour
-|Enter `background-color:` in the Custom styles field followed by the desired link:https://htmlcolorcodes.com/[HTML colour code^], e.g. `background-color:&#35;A9F5D0;`.
+|Enter `background-color:` in the *Custom styles* field followed by the desired link:https://htmlcolorcodes.com/[HTML colour code^], e.g. `background-color:&#35;A9F5D0;`.
 
 |Font colour
 |Enter `color:` in the *Custom styles* field followed by the desired link:https://htmlcolorcodes.com/[HTML colour code^], e.g. `color:&#35;A0A1B;`.
@@ -737,7 +744,8 @@ Creating a default template:
 . Go to *CRM » EmailBuilder (Test phase)*.
 . In the line of the folder in which you want to create a default template, click on material:more_vert[]. +
 → A new window opens.
-. Click on material:add[] *Add* material:play_arrow[] > material:description[] *Template*. +
+. Click on material:add[] *Add* material:play_arrow[].
+. Click on material:description[] *Template*. +
 → The *Create new template* window opens.
 . Enter a name for the template.
 . Select header and footer for the default template from the drop-down list.
@@ -749,7 +757,7 @@ As soon as the default template is created, you can see the prefilled content in
 The toolbar shows the prefilled subject. Adjust the subject by clicking on material:translate[] in the top right corner. In this area, you can also select up to 3 static attachments that are attached to the email template. +
 In the *Settings* area, select an owner, the client and the header and footer, if not done already. In this area, you can also select up to 3 dynamic attachments and fill the fields *Reply to*, *CC* and *BCC*.
 
-*_Note:_* If you do not want to create the default template within a folder, click on the start page of the *CRM » EmailBuilder (Test phase)* menu in the bottom left on material:add[] *Add* material:play_arrow[] and select material:description[] *Template* afterwards. The template will then be created on the first level and does not belong to a folder.
+*_Note:_* If you do not want to create the default template within a folder, click on the start page of the *CRM » EmailBuilder (Test phase)* menu in the bottom left on material:add[] *Add* material:play_arrow[] and click on material:description[] *Template* afterwards. The template will then be created on the first level and does not belong to a folder.
 
 [#default-templates-name-and-subject]
 ==== Available default templates
@@ -940,7 +948,7 @@ Moving a template:
 
 . Go to *CRM » EmailBuilder (Test phase)*.
 . Expand the folder (material:chevron_right[]) that contains the template you want to move.
-. In the line of the template, click on material:more_vert[].
+. In the line of the template, click on material:more_vert[]. +
 → A new window opens.
 . Click on material:move_down[] *Move*. +
 → The *Move* window opens.
@@ -1024,7 +1032,7 @@ Copying a template:
 . Expand the folder (material:chevron_right[]) that contains the template you want to copy.
 . In the line of the template that you want to copy, click on material:more_vert[]. +
 → A new window opens.
-. Click on material:copy_content[] *Copy*. +
+. Click on material:content_copy[] *Copy*. +
 → A new window opens.
 . Select the language from the list that you want to copy the template to. +
 → The *Enter subject* window opens. +
