--- a/docs/de-de/modules/crm/pages/faq.adoc
+++ b/docs/de-de/modules/crm/pages/faq.adoc
@@ -113,7 +113,7 @@ Dann schau dir dieses xref:crm:praxisbeispiel-tracking-url-senden.adoc#[Praxisbe
 [.collapseBox]
 .plenty migriert die alten E-Mail-Vorlagen aus meinem System in die neue Version des EmailBuilders. Was bedeutet das und muss ich nach der Migration irgendetwas tun?
 --
-Wie in diesem Forumsbeitrag (ADD LINK) angekündigt, werden Vorlagen, die du in der Vergangenheit im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Vorlagen* erstellt hast, automatisch in den neuen EmailBuilder migriert. Auch die Struktur und die Variablen werden aus den alten Vorlagen übernommen.
+Wie in diesem link:https://forum.plentymarkets.com/t/neue-funktionen-des-emailbuilders-inkl-migration-bestehender-vorlagen-new-features-of-emailbuilder-incl-migration-of-existing-templates/693489[Forumsbeitrag^] angekündigt, werden Vorlagen, die du in der Vergangenheit im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Vorlagen* erstellt hast, automatisch in den neuen EmailBuilder migriert. Auch die Struktur und die Variablen werden aus den alten Vorlagen übernommen.
 
 *Todo: Inhalte der migrierten Vorlagen prüfen*
 
@@ -136,7 +136,7 @@ Prüfe außerdem in deinem gesamten plentymarkets System alle Stellen, an denen 
 
 Wenn du bereits eine Vorlage in mehreren Sprachen angelegt hast, musst du die Inhalte im neuen EmailBuilder manuell nachpflegen. Nutze dazu die Kopieren-Funktion.
 
-Alle  Informationen zum neuen EmailBuilder findest du in unserem xref:crm:emailbuilder.adoc#[Handbuch].
+Alle Informationen zum neuen EmailBuilder findest du in unserem xref:crm:emailbuilder.adoc#[Handbuch].
 
 --
 
