remove cloud usage page change/update hosting-daten.adoc

--- a/docs/de-de/modules/business-entscheidungen/pages/traffic-usage.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/traffic-usage.adoc
@@ -6,6 +6,8 @@
 TODO: Einleitung, was macht die Kennzahl?
 Um zu wissen, wie viel dich die Änderungshistorie kostet, musst du also zuerst deinen Verbrauch kennen.
 Mithilfe der kostenlosen Kennzahl *Service-Verbrauch* kannst du deinen Verbrauch jederzeit tagesaktuell einsehen.
+
+Vermutlich ist das hier gemeint: https://knowledge.plentymarkets.com/de-de/manual/main/business-entscheidungen/hosting-daten.html
 ////
 
 :kennzahl: Traffic-Verbrauch
