Added info box about own data fields

--- a/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
@@ -39,6 +39,9 @@ Für jedes Marktplatz-Datenfeld hast du die folgenden Zuordnungsmöglichkeiten. 
   * *1:n-Zuordnung*
   * *Eigener-Wert-Zuordnung*
   * *Zuordnung mit mathematischer Berechnung*
+  ifdef::own-data-fields[]
+  * *Zuordnung von eigenen Datenfeldern*
+  endif::own-data-fields[]
 . Speichere (terra:save[role="darkGrey"]) den Katalog. +
 → Die Zuordnungen werden gespeichert.
 
@@ -319,6 +322,7 @@ Zahlenwerte neu berechnen:
 --
 
 ifdef::own-data-fields[]
+[#eigene-datenfelder-zuordnen]
 [.collapseBox]
 .Zuordnung von eigenen Datenfeldern: 1 selbst erstelltes Datenfeld, 1 plentymarkets Datenfeld
 --
