--- a/docs/en-gb/modules/markets/partials/catalogue-mapping.adoc
+++ b/docs/en-gb/modules/markets/partials/catalogue-mapping.adoc
@@ -31,7 +31,7 @@ ifdef::bol.com[]
 endif::bol.com[]
 → In the right column, you map the plentymarkets data fields. Any plentymarkets data fields that you already mapped are also shown in the right column.
 . Now, map suitable plentymarkets data fields to the market data fields. +
-*_Tip:_* Need more information about the plentymarkets data fields? Then head over to the manual page for the standard format xref:data:item.adoc#[Item (new)]. +
+*_Tip:_* Need more information about the plentymarkets data fields? Then head over to the manual page for the standard format xref:data:catalogue-item.adoc#[Item (new)]. +
 For each marketplace data field, you have the following mapping options. These mapping options are described in more detail in the info boxes below:
   * *Simple 1:1 mapping*
   * *Complex 1:1 mapping*
@@ -39,6 +39,9 @@ For each marketplace data field, you have the following mapping options. These m
   * *1:n mapping*
   * *Own value mapping*
   * *Mapping with mathematical calculations*
+  ifdef::own-data-fields[]
+  * *Mapping own data fields*
+  endif::own-data-fields[]
 . Save (terra:save[role="darkGrey"]) the catalogue. +
 → The mappings are saved.
 
@@ -154,7 +157,7 @@ Two separate fallback conditions are available:
 [cols="1,4a"]
 |===
 
-| *Null (Standard)*
+| *Null (default)*
 | The fallback data field is used if the data field above is mapped in the catalogue but not linked to the variation.
 
 The condition "Null" is useful when you want to map fallback data fields for the following types of plentymarkets data fields:
@@ -319,6 +322,7 @@ Recalculating numerical values:
 --
 
 ifdef::own-data-fields[]
+[#assigning-own-data-fields]
 [.collapseBox]
 .Assigning own data fields: 1 own data field, 1 plentymarkets data field
 --
