--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -499,6 +499,12 @@ Select a meaningful name that helps you keep track of your catalogues. For examp
 
 After you have created a catalogue, map the market's data fields to item data saved in plentymarkets. This chapter describes how you map data fields and what particularities apply for item exports to {market}.
 
+[TIP]
+.Map your own data fields
+====
+You want to transfer item data to Kaufland that do not have a designated data field in the market’s catalogue? In the Kaufland catalogues, you have the possibility to create own data fields and assign them to item data saved in plentymarkets. How to map your own data fields is described <<#assigning-own-data-fields, here>>.
+====
+
 :own-data-fields:
 
 include::partial$catalogue-mapping.adoc[]
