add navigation entry

--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -503,6 +503,7 @@
 **** xref:business-decisions:revenue.adoc[Revenue]
 **** xref:business-decisions:VAT-total.adoc[VAT total]
 **** xref:business-decisions:usage.adoc[Service usage]
+**** xref:business-decisions:traffic-usage.adoc[Traffic usage]
 **** xref:business-decisions:shipping-revenue.adoc[Shipping revenue]
 *** xref:business-decisions:reports.adoc[Raw data]
 **** xref:business-decisions:manage-reports.adoc[Managing reports]
