Some minor corrections

--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -254,7 +254,7 @@ Lager verknüpfst du über die Einstellung *Lager verknüpfen* im Menü *Einrich
 
 :market: Kaufland.de
 :referrer: Kaufland.de
-:referrer-option: pass:quotes[Option *Kaufland.de* mit der ID *170*]
+:referrer-option: pass:quotes[Option *Kaufland.de* mit der ID *102*]
 
 include::partial$auftragsherkunft-aktivieren.adoc[]
 
@@ -502,7 +502,7 @@ Nachdem du einen Katalog erstellt hast, ordnest du die Datenfelder des Marktplat
 [TIP]
 .Eigene Datenfelder zuordnen
 ====
-Du möchtest Artikeldaten an Kaufland übertragen, für die es im Katalog des Marktplatzes kein Datenfeld gibt? In den Kaufland-Katalogen hast du die Möglichkeit, eigene Datenfelder zu erstellen und mit den in plentymarkets gespeicherten Artikeldaten verknüpfen. Wie das geht, ist <<#eigene-datenfelder-zuordnen, hier>> beschrieben.
+Du möchtest Artikeldaten an Kaufland übertragen, für die es im Katalog des Marktplatzes kein Datenfeld gibt? In den Kaufland-Katalogen hast du die Möglichkeit, eigene Datenfelder zu erstellen und mit den in plentymarkets gespeicherten Artikeldaten zu verknüpfen. Wie das geht, ist <<#eigene-datenfelder-zuordnen, hier>> beschrieben.
 ====
 
 :own-data-fields:
