--- a/docs/en-gb/modules/markets/partials/catalogue-mapping.adoc
+++ b/docs/en-gb/modules/markets/partials/catalogue-mapping.adoc
@@ -33,15 +33,15 @@ endif::bol.com[]
 . Now, map suitable plentymarkets data fields to the market data fields. +
 *_Tip:_* Need more information about the plentymarkets data fields? Then head over to the manual page for the standard format xref:data:catalogue-item.adoc#[Item (new)]. +
 For each marketplace data field, you have the following mapping options. These mapping options are described in more detail in the info boxes below:
-  * *Simple 1:1 mapping*
-  * *Complex 1:1 mapping*
-  * *1:1 mapping with fallback data fields*
-  * *1:n mapping*
-  * *Own value mapping*
-  * *Mapping with mathematical calculations*
-  ifdef::own-data-fields[]
-  * *Mapping own data fields*
-  endif::own-data-fields[]
+** *Simple 1:1 mapping*
+** *Complex 1:1 mapping*
+** *1:1 mapping with fallback data fields*
+** *1:n mapping*
+** *Own value mapping*
+** *Mapping with mathematical calculations*
+ifdef::own-data-fields[]
+** *Mapping own data fields*
+endif::own-data-fields[]
 . Save (terra:save[role="darkGrey"]) the catalogue. +
 → The mappings are saved.
 
